# ReasonAnchor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  pyproject.toml
config/: local_config.example.json  mcp_file_access.json
go_runner/: README.md  go.mod
security_function_platform/: __init__.py
tests/: module_function_helpers.py  test_basic_functions.py  test_builtin_registry_expanded.py  test_byte_stats_function.py  test_config_api.py  test_config_store.py  test_dynamic_validation_functions.py  test_focused_dynamic_validation.py  test_function_config_fields.py  test_function_level_tool_wrappers.py  test_function_metadata.py  test_function_registry.py  test_function_result.py  test_ioc_and_multiformat_functions.py  test_knowledge_importers.py  test_malware_final_report_knowledge.py  test_malware_knowledge_lookup.py  test_mcp_file_access.py  test_mcp_server.py  test_module_actions_capabilities.py  test_module_system.py  test_platform_skill.py  test_raw_output_api.py  test_raw_output_id_api.py  test_raw_sorting.py  test_recon_scan_module.py  test_result_api.py  test_reverse_deep_static_functions.py  test_run_function_api.py  test_sessions_api.py  test_static_behavior_attack_mapping.py  test_threat_intel_functions.py  test_tool_functions.py  test_validation_samples_assets.py  test_vmware_dynamic_functions.py  test_workflow.py  test_workflow_templates_api.py
tools/: select_random_zip_member.py
web/: analysis.js  common.js  config-page.js  config.html  index.html  module-page.html  module-page.js  modules.html  modules.js  platform.html  (+8 more)
(+260 files in other folders)
