[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-function-platform"
version = "0.1.0"
description = "Minimal functionized defensive static analysis prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "mcp",
    "python-multipart",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["security_function_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
